# python-web_hw_13_2

./: README.md  pyproject.toml
hw_project/hw_project/: settings.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: stile.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag_view.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html  password_reset.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
